--- a/frontend/app/app/index.html
+++ b/frontend/app/app/index.html
@@ -9,8 +9,8 @@
 <body>
 <canvas id="canvas" width="1000" height="600"></canvas>
 <div style="display:none">
-    <img id="animations_id" src="/frontend/app/assets/animations.gif" alt="">
-    <img id="ghosts_id" src="/frontend/app/assets/ghosts.png" alt="">
+    <img id="animations" src="/frontend/app/assets/animations.gif" alt="">
+    <img id="ghosts" src="/frontend/app/assets/ghosts.png" alt="">
 </div>
 <script src="/backend/src/main/ghost.js"></script>
 <script src="/backend/src/main/pacman.js"></script>
