--- a/frontend/app/app/index.html
+++ b/frontend/app/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Yellow Headed Man</title>
 </head>
 <body>
-<canvas id="canvas" width="1000" height="600"></canvas>
+<canvas id="canvas" width="500" height="500"></canvas>
 <div style="display:none">
     <img id="animations" src="/frontend/app/assets/animations.gif" alt="">
     <img id="ghosts" src="/frontend/app/assets/ghosts.png" alt="">
