added ghost class and modifed game, pacman files

--- a/frontend/app/app-create-edit/index.html
+++ b/frontend/app/app-create-edit/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Yellow Headed Man game</title>
 </head>
-<body>
-<canvas id="canvas" width="2000" height="2000"></canvas>
-<div style="display:block">
-      <img id="animations" src="../assets/animations.gif" alt="">
-      <img id="ghosts" src="../assets/ghosts.png" alt="">
+
+<body style="margin: 0;">
+<canvas id="canvas" width="500" height="500"></canvas>
+<div style="display:block;">
+      <img id="animations" src="../assets/animations.gif" width="140" height="20" alt="">
+      <img id="ghosts" src="../assets/ghosts.png" width="300" height="236" alt="">
 </div>
-<script type="module" src="../config.js">
-
-</script>
-<script src="../../../backend/src/main/ghost.js">
-
-</script>
-<script src="../../../backend/src/main/pacman.js">
-
-</script>
-<script src="../../../backend/src/main/game.js">
-
-</script>
+<script type="module" src="../config.js"></script>
+<script src="../../../backend/src/main/ghost.js"></script>
+<script src="../../../backend/src/main/pacman.js"></script>
+<script src="../../../backend/src/main/game.js"></script>
 </body>
+
 </html>
